--- a/config.json
+++ b/config.json
@@ -2,7 +2,8 @@
     "spider0": "./fty/jar/fty.jar",
     "spider": "https://gh-proxy.org/https://github.com/tqx5201/tvbox/raw/refs/heads/main/fty/jar/fty.jar",
     "wallpaper0": "https://深色壁纸.xxooo.cf/",
-    "wallpaper": "https://bing.img.run/rand_uhd.php",
+    "wallpaper1": "https://bing.img.run/rand_uhd.php",
+    "wallpaper": "https://www.yumus.cn/api/?brand=bing&ua=uhd",
     "sites": [
 
         {"key":"MyDrive","name":"🗂我的云盘┃我配置","type":3,"api":"csp_MyDriveGuard","changeable":0,"indexs":0,"searchable":1,"style":{"type":"oval"},"ext":{"Cloud-drive":"tvfan/Cloud-drive.txt"}},
